--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,37 @@
 body {
+  background: #209cee;
   margin: 0;
   font-family: "Arial";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 code {
   font-family: Arial;
 }
+h1 {
+  font-family: cursive;
+  text-align: center;
+  font-size: 45px;
+  color: #e8e8e8;
+}
 
 .app {
-  background: #209cee;
-  padding: 30px;
+  background-color: #ffffcf;
+  width: 900px;
+  padding: 100px;
   height: 100vh;
+  position: relative;
+  margin-bottom: 100px;
 }
 
 .todo-list {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   background: #e8e8e8;
   border-radius: 4px;
   padding: 5px;
@@ -49,8 +65,9 @@ code {
 }
 .todo:hover {
   cursor: pointer;
-  opacity: 0.6;
+  /* opacity: 0.6; */
 }
 input::placeholder {
   font-family: cursive;
+  transform: scale(0.98);
 }
